# tantivy_dart

./: .gitignore  readme.md
tantivy_dart/: .metadata  .packages  pubspec.yaml
tantivy_dart/lib/: books_example.dart  generated_bindings.dart  index.dart  schema.dart  tantivy_dart.dart  tantivy_dart.freezed.dart
tantivy_dart/test/: tantivy_dart_test.dart
tantivy_rust_bindings/: Cargo.toml
tantivy_rust_bindings/src/: api.rs  bridge_generated.rs
tantivy_rust_bindings/src/api/: search_engine.rs
